# myVet

./: .gitignore  LICENSE  README.md  docker-compose.yml  start.sh
backend/: CMakeLists.txt  Dockerfile  a.out  api.cpp  crow_all.h  main.cpp  test.cpp
backend/core/: Database.cpp  Database.h
backend/include/crow/middlewares/: cors.h
backend/include/spark/: spark.cpp  spark.h
backend/utils/: Citas.cpp
front/: package-lock.json  package.json
front/src/: AboutView.vue  App.vue  main.js
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  App.tsx  main.tsx
frontend/src/components/: AdminDashboard.tsx  AdminNavbar.tsx  Alerts.jsx  CitaModal.tsx  CitaModalHome.tsx  DelPetModal.tsx  Foot.jsx  InfoModal.tsx  Navbar.jsx  Navbar.tsx  PetInfoModal.tsx  PetModal.tsx  TratamientoModal.tsx  UserDashboard.tsx  UserNavbar.tsx  VentasForm.tsx
frontend/src/pages/: AboutView.tsx  ContactView.tsx  Home.jsx  HomeView.tsx  Login.jsx  LoginView.tsx  RegisterView.tsx  ServicesView.tsx  Signup.jsx  Team.jsx  Testimonials.tsx
frontend/src/utils/: Api.jsx  Date.jsx
